<resources>
    <string name="app_name">P2P Copier</string>
    <string name="app_name_1">P2P Copier</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>

    <string name="home_conn_to_web">Connect to Website</string>
    <string name="home_cpy_from_img">Copy Text from Image</string>
    <string name="home_file_upload">Upload a file</string>

    <string name="home_cpy_from_clip">Paste from Clipboard</string>
    <string name="home_cpy_type_text">Type some Text</string>

    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_regista">Regista</string>

    <string name="how_1">The app needs to be connected to the website first.</string>
    <string name="how_2">This is achieved by clicking the button below and proceeding to use either  QR scanner or entering the provided code.</string>
    <string name="how_3">Once the QR is scanned successfully, or the code entered is correct the app will redirect to an activity where you can copy-and-paste cross devices seamlessly.</string>

    <string name="reg_app_name">Welcome to PC-Phone-Copier</string>
    <string name="how_sess">Previous sessions here in a recyclerview</string>
    <string name="auth_app_name">Create a session</string>
    <string name="txt_auth_qr_scan">Press this button scan the QR code on the website</string>
    <string name="txt_auth_code_scan">Insert the code on the website to get started</string>
    <string name="btn_auth_verify_code">Verify code</string>
    <string name="home_btn_get_started">Get Started Now</string>
    <string name="ed_auth_hint_code">Type code here</string>
    <string name="txt_auth_qr">Scan QR</string>
    <string name="how_to_operate">Press any category to get started</string>
    <string name="str_paste_copy">Paste from Clipboard</string>
    <string name="str_upload_local">Upload to Cloud</string>
    <string name="str_paste_copy_hint">Paste here or Type some text here</string>
    <string name="str_random_quote">A basic app descriptor</string>
    <string name="home_qr_scan">Scan QR</string>
    <string name="str_select_img_from_camera">Select Image from Camera</string>
    <string name="str_img_extract_text">Extract and Copy Text</string>
    <string name="str_extracted_text_here">Extracted Text Here</string>
    <string name="home_sess_new_sess">Create a new Session Now</string>
    <string name="home_sess_continue">Continue with the previous Session.</string>
    <string name="home_sess_continuity">Seems your device had already created a session. You can either \"Continue\" or \"Create a new session\".</string>
    <string name="str_upload_select_a_file">Select a file/s</string>
    <string name="str_upload_upload_to_cloud">Upload</string>
    <string name="home_menu_history_text">Text</string>
    <string name="home_menu_history_files">Uploaded Files</string>
    <string name="home_menu_profile">Profile</string>
    <string name="home_menu_home">Home</string>
    <string name="hist_current_sess_files">Current Session</string>
    <string name="hist_all_sess_files">All Files</string>


    <string name="quick_actions">Quick Actions</string>
    <string name="your_activity">Activity</string>
    <string name="transfers">Transfers</string>
    <string name="files">Files</string>
    <string name="texts">Texts</string>
    <string name="connect_now">Connect</string>
    <string name="view_tutorial">Watch Tutorial</string>
    <string name="quick_tip_steps">1. Connect to website\n2. Choose method\n3. Transfer</string>
    <string name="home_cpy_type_text_short">Type</string>
    <string name="home_cpy_from_clip_short">Paste</string>
    <string name="home_cpy_from_img_short">Image OCR</string>
    <string name="home_qr_scan_short">QR Scan</string>
    <string name="home_file_upload_short">Files</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_backend_config">Backend Config</string>
    <string name="backend_config_title">Backend Configuration</string>
    <string name="backend_url_label">Server URL</string>
    <string name="backend_url_hint">e.g., p2p.chegecache.co.ke</string>
    <string name="backend_port_label">Port</string>
    <string name="backend_port_hint">443</string>
    <string name="btn_test_connection">Test Connection</string>
    <string name="btn_save_config">Save Configuration</string>
    <string name="btn_test_and_save">Test &amp; Save</string>
    <string name="backend_testing">Testing connection\u2026</string>
    <string name="backend_success">Connection successful</string>
    <string name="backend_failed">Connection failed</string>
    <string name="backend_saved">Backend configuration saved</string>
    <string name="backend_not_tested">Not tested yet</string>
    <string name="backend_current_url">Current URL: %1$s</string>
    <string name="backend_save_warning">Save without testing?</string>
    <string name="backend_save_warning_msg">You have not tested the connection yet. The URL may be incorrect. Do you want to save anyway?</string>
    <string name="backend_save_anyway">Save Anyway</string>
    <string name="backend_cancel">Cancel</string>
</resources>
